Refactor AuditLogAspect and improve error logging; update tests for consistency